[package]
name = "buckyosapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "buckyosapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-store = "2.4.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "1.0"
bip39 = "2.0"
bitcoin = { version = "0.31.1", features = ["rand-std", "serde"] }
sha3 = "0.10"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ulid = "1.1"
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib"}
secrecy = "0.8"
zeroize = "1.7"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
if-addrs = "*"
tauri-plugin-http = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
